# ibus-libzhuyin

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  ibus-libzhuyin.spec.in
.github/workflows/: make-check.yml
data/: Makefile.am  com.github.libzhuyin.ibus-libzhuyin.gschema.xml  ibus-setup-libzhuyin.desktop.in  ibus-setup-libzhuyin.desktop.in.in  libzhuyin.appdata.xml  usersymbol.txt
data/icons/: Makefile.am
data/model/: Makefile.am  table.conf.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  el.po  es.po  ibus-libzhuyin.pot  ka.po  ru.po  zh_CN.po  zh_HK.po  zh_TW.po
scripts/: update-tradsimp-table.py
setup/: Makefile.am  config.py.in  ibus-libzhuyin-preferences.ui  ibus-setup-libzhuyin.in  main.py
src/: Makefile.am  ZYBus.h  ZYConfig.cc  ZYConfig.h  ZYEditor.cc  ZYEditor.h  ZYEngine.cc  ZYEngine.h  ZYEnhancedText.cc  ZYEnhancedText.h  ZYFallbackEditor.cc  ZYFallbackEditor.h  ZYLibZhuyin.cc  ZYLibZhuyin.h  ZYLookupTable.h  ZYMain.cc  ZYObject.h  ZYPointer.h  ZYProperty.h  ZYRawEditor.cc  ZYRawEditor.h  ZYSignal.h  ZYString.h  ZYSymbolLookup.cc  ZYSymbolLookup.h  ZYSymbols.cc  ZYSymbols.h  ZYText.h  ZYTradSimpConverter.cc  ZYTradSimpConverter.h  ZYTradSimpConverterTable.h  ZYTypes.h  ZYUtil.h  ZYZBopomofoSymbolSection.cc  ZYZBopomofoSymbolSection.h  ZYZBuiltinSymbolSection.cc  ZYZBuiltinSymbolSection.h  ZYZConfig.cc  ZYZConfig.h  ZYZEnhancedEditor.cc  (+20 more)
